--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,41 @@
 <h1>Goalden Shop</h1>
 
-<h5>Name: </h5>
-<p>{{ name }}<p>
-<h5>Class: </h5>
+<h5>Name:</h5>
+<p>{{ name }}</p>
+<h5>Class:</h5>
 <p>{{ class }}</p>
+
+<a href="{% url 'main:add_products' %}">
+  <button>+ Add </button>
+</a>
+
+<hr>
+
+{% if not products_list %}
+<p>No products available yet.</p>
+{% else %}
+
+{% for product in products_list %}
+<div>
+  <h2><a href="{% url 'main:show_products' product.id %}">{{ product.name }}</a></h2>
+
+  {% if product.thumbnail %}
+    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
+  <br />
+  {% endif %}
+  
+  <p><b>Category:</b> {{ product.get_category_display }}</p>
+  <p><b>Price:</b> Rp{{ product.price }}</p>
+  <p>{{ product.description|truncatewords:25 }}...</p>
+
+  {% if product.is_featured %}
+    <p><b>Featured</b></p>
+  {% endif %}
+
+  <p><a href="{% url 'main:show_products' product.id %}"><button>Detail</button></a></p>
+</div>
+
+<hr>
+{% endfor %}
+
+{% endif %}
