--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -8,9 +8,18 @@
 <a href="{% url 'main:add_products' %}">
   <button>+ Add </button>
 </a>
-
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 <hr>
 
+<a href="?filter=all">
+    <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Articles</button>
+</a> 
 {% if not products_list %}
 <p>No products available yet.</p>
 {% else %}
