--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,11 +15,12 @@
 <hr>
 
 <a href="?filter=all">
-    <button type="button">All Articles</button>
+    <button type="button">All Products</button>
 </a>
 <a href="?filter=my">
-    <button type="button">My Articles</button>
+    <button type="button">My Products</button>
 </a> 
+
 {% if not products_list %}
 <p>No products available yet.</p>
 {% else %}
