--- a/main/templates/products_detail.html
+++ b/main/templates/products_detail.html
@@ -19,7 +19,7 @@
 {% endif %}
 
 {% if news.user %}
-    <p>Seller: {{ news.user.username }}</p>
+    <p>Seller: {{ products.user.username }}</p>
 {% else %}
     <p>Seller: Anonymous</p>
 {% endif %}
