--- a/main/templates/products_detail.html
+++ b/main/templates/products_detail.html
@@ -18,7 +18,7 @@
     <p><b>Featured</b></p>
 {% endif %}
 
-{% if news.user %}
+{% if products.user %}
     <p>Seller: {{ products.user.username }}</p>
 {% else %}
     <p>Seller: Anonymous</p>
