--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -29,7 +29,7 @@
 <div>
   <h2><a href="{% url 'main:show_products' product.id %}">{{ product.name }}</a></h2>
 
-  {% if product.thaumbnail %}
+  {% if product.thumbnail %}
     <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
   <br />
   {% endif %}
