fix product detail and readme

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -23,29 +23,29 @@
 
 {% if not products_list %}
 <p>No products available yet.</p>
-{% else %}
+{% endif %}
 
 {% for product in products_list %}
 <div>
   <h2><a href="{% url 'main:show_products' product.id %}">{{ product.name }}</a></h2>
 
   {% if product.thumbnail %}
-    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
+    <img src="{{ product.thumbnail }}" alt="thumbnail" width="200" height="250">
   <br />
   {% endif %}
+
+  <p>
+    <b>{{ product.get_category_display }}</b>  
+    {% if product.is_featured %}
+      | <b>Featured</b>
+    {% endif %}
+  </p>
   
-  <p><b>Category:</b> {{ product.get_category_display }}</p>
   <p><b>Price:</b> Rp{{ product.price }}</p>
   <p>{{ product.description|truncatewords:25 }}...</p>
-
-  {% if product.is_featured %}
-    <p><b>Featured</b></p>
-  {% endif %}
 
   <p><a href="{% url 'main:show_products' product.id %}"><button>Detail</button></a></p>
 </div>
 
 <hr>
 {% endfor %}
-
-{% endif %}
