--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block meta %}
-<title>Register - GOALDENSHOP</title>
+<title>Register - Goaldenshop</title>
 {% endblock meta %}
 
 {% block content %}
