--- a/main/templates/edit_products.html
+++ b/main/templates/edit_products.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>Edit Products - GOALDENSHOP</title>
+<title>Edit Products - Goaldenshop</title>
 {% endblock meta %}
 
 {% block content %}
