--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>GOALDENSHOP</title>
+<title>Goaldenshop</title>
 {% endblock meta %}
 
 {% block content %}
