Fix edit product and product details

--- a/main/templates/products_detail.html
+++ b/main/templates/products_detail.html
@@ -11,7 +11,7 @@
         
         <div class="mb-8">
            <a href="{% url 'main:show_main' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
-                ← Back to home
+                ← Back to Product List
             </a>
         </div>
 
