--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,9 +23,9 @@
                         <p class="text-[15px] text-[#938b89] leading-tight">Hello,</p>
                         <p class="font-bold text-[20px] text-[#1800ad] leading-tight">{{ user.username }}</p>
                     </div>
-                    <a href="{% url 'main:logout' %}" class="text-red-600 hover:text-red-800 font-semibold transition-colors">
+                    <button id="logout-btn" type="button" class="text-red-600 hover:text-red-800 font-semibold transition-colors">
                         Logout
-                    </a>
+                    </button>
                 {% else %}
                     <a href="{% url 'main:login' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
                         Login
